--- a/LiteChatGUI/LiteChatGUI/ChatScreen.ui
+++ b/LiteChatGUI/LiteChatGUI/ChatScreen.ui
@@ -884,8 +884,8 @@ color: rgb(255, 255, 255);</string>
      <property name="verticalSpacing">
       <number>0</number>
      </property>
-     <item row="4" column="0">
-      <widget class="QPushButton" name="LMessage5">
+     <item row="1" column="1">
+      <widget class="QPushButton" name="RMessage2">
        <property name="styleSheet">
         <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
 font-color: rgb(255,255,255);</string>
@@ -906,8 +906,63 @@ font-color: rgb(255,255,255);</string>
        </property>
       </widget>
      </item>
+     <item row="5" column="0">
+      <widget class="QPushButton" name="LMessage6">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
      <item row="6" column="1">
       <widget class="QPushButton" name="RMessage7">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QPushButton" name="RMessage3">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QPushButton" name="RMessage5">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="LMessage4">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QPushButton" name="LMessage5">
        <property name="styleSheet">
         <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
 font-color: rgb(255,255,255);</string>
@@ -934,8 +989,8 @@ font-color: rgb(255,255,255);</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="RMessage3">
+     <item row="6" column="0">
+      <widget class="QPushButton" name="LMessage7">
        <property name="styleSheet">
         <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
 font-color: rgb(255,255,255);</string>
@@ -945,8 +1000,52 @@ font-color: rgb(255,255,255);</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
-      <widget class="QPushButton" name="LMessage7">
+     <item row="2" column="0">
+      <widget class="QPushButton" name="LMessage3">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="RMessage4">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QPushButton" name="RMessage8">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="QPushButton" name="LMessage8">
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
+font-color: rgb(255,255,255);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QPushButton" name="RMessage6">
        <property name="styleSheet">
         <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
 font-color: rgb(255,255,255);</string>
@@ -973,105 +1072,6 @@ font-color: rgb(255,255,255);</string>
          <height>16777215</height>
         </size>
        </property>
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QPushButton" name="RMessage5">
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="RMessage2">
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QPushButton" name="LMessage3">
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="0">
-      <widget class="QPushButton" name="LMessage6">
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QPushButton" name="RMessage4">
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QPushButton" name="LMessage4">
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0">
-      <widget class="QPushButton" name="LMessage8">
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="QPushButton" name="RMessage8">
-       <property name="styleSheet">
-        <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
-font-color: rgb(255,255,255);</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QPushButton" name="RMessage6">
        <property name="styleSheet">
         <string notr="true">font: 12pt &quot;Lucida Sans&quot;;
 font-color: rgb(255,255,255);</string>
@@ -1965,7 +1965,7 @@ color: rgb(255, 255, 255);</string>
      <rect>
       <x>30</x>
       <y>180</y>
-      <width>41</width>
+      <width>31</width>
       <height>471</height>
      </rect>
     </property>
@@ -2008,6 +2008,152 @@ color: rgb(255, 255, 255);
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="refreshButton">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>80</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="palette">
+     <palette>
+      <active>
+       <colorrole role="Button">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="ButtonText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>255</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Base">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Window">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </active>
+      <inactive>
+       <colorrole role="Button">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="ButtonText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>0</red>
+          <green>0</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Base">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Window">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </inactive>
+      <disabled>
+       <colorrole role="Button">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="ButtonText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>120</red>
+          <green>120</green>
+          <blue>120</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Base">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+       <colorrole role="Window">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>42</red>
+          <green>49</green>
+          <blue>51</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </disabled>
+     </palette>
+    </property>
+    <property name="font">
+     <font>
+      <family>Lucida Sans</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(42, 49, 51);</string>
+    </property>
+    <property name="text">
+     <string>Refresh</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
